# 3d-adaptive-viewpoint-sampling-coverage

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake
AVSCPP/include/: avscpp.hpp  controls.hpp  main.hpp  mesh.hpp  render.hpp  shader.hpp  utils.hpp
AVSCPP/shaders/: 2dbackprojectfrag.frag  2dbackprojectvert.vert  2dtexfragshader.frag  simplefragmentshader.frag  simplefragmentshaderint.frag  simpleframentshaderbackdetect.frag  simplegeometryshader.geom  simplevertexshader.vert  simplevertexshaderint.vert
AVSCPP/src/: avscpp.cpp  controls.cpp  genviewpoint.cpp  main.cpp  mesh.cpp  render.cpp  shader.cpp  utils.cpp
resources/models/: B787.pcd  aeroplane.pcd  aeroplane3.pcd  cube.pcd
saved/: aeroplane3_r0_nv4.vp
saved/aeroplane3_r0_nv4/: viewpoints.output  viewpoints.par  viewpoints.points  viewpoints.tsp
